<resources>
    <string name="app_name">Ejercicio Clase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Fragment_first -->
    <string name="title_welcome">BIENVENIDO</string>
    <string name="txt_button1">Calculadora 1</string>
    <string name="txt_button2">Calculadora 2</string>


    <!-- TODO: Fragment_Second -->
    <string name='txt_button3'>Volver</string>
    <string name="numero_1">Número 1</string>
    <string name="numero_2">Número 2</string>
    <string name="txt_button_calculate">CALCULAR</string>
    <string name="txt_radio_suma">Sumar</string>
    <string name="txt_radio_restar">Restar</string>
    <string name="txt_radio_multiplicar">Multiplicar</string>
    <string name="txt_radio_dividir">Dividir</string>


    <!-- TODO: Fragment_third -->
    <string name='title_credits'>CALCULAR</string>
    <string name='txt_button4'>Menu Principal</string>
    <string name='respuesta'>Respuesta</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>

